# chesseval

./: .gitmodules  game_reviewer.py  main.py  package-lock.json  package.json  pyproject.toml  utils.py
games/: fool.pgn  jmft.pgn  sanseb.pgn  yahoo.pgn
templates/: board.html  games.html  new.html
